Fix Responsive Logo BG

--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
     </header>
     <section>
       <img class="bg" src="img/bgmain.png" />
-      <h1 id="text">BoxPhone</h1>
-      <h2 id="text2">Studio</h2>
+        <h1 id="text">BoxPhone <p>Studio</p></h1>
     </section>
     <div class="content" id="aboutme">
       <h2>เกี่ยวกับเรา</h2>
@@ -97,7 +96,7 @@
           <a href=""><img class="contacts-img" src="img/line.png" width="40px"height="auto"> Line</a>          
         </div>
         <div class="col-md-1">
-            <img src="img/lineqr.jpg" width="130px" height="auto">
+            <img style="border-radius: 10px;" src="img/lineqr.jpg" width="130px" height="auto">
         </div>
       </div>
     </div>
