Add more Contact
Phone Number

--- a/index.html
+++ b/index.html
@@ -93,7 +93,13 @@
           <a href="https://www.facebook.com/BoxPhoneStudio" target="_blank"><img src="img/facebook.png" width="40px" height="auto" alt="facebookicons"> BoxPhoneStudio</a>
           <br>
           <br>
-          <a href=""><img class="contacts-img" src="img/line.png" width="40px"height="auto"> Line</a>          
+          <a href=""><img class="contacts-img" src="img/line.png" width="40px"height="auto"> Line</a>
+          <br>
+          <br>
+          <a href=""><img class="contacts-img" src="img/phone.png" width="40px" height="auto"> 098-217-8244</a>
+          <br>
+          <br>
+          <a href=""><img class="contacts-img" src="img/phone.png" width="40px" height="auto"> 062-381-5050</a>     
         </div>
         <div class="col-md-1">
             <img style="border-radius: 10px;" src="img/lineqr.jpg" width="130px" height="auto">
