--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
           <a href=""><img class="contacts-img" src="img/line.png" width="40px"height="auto"> Line</a>
           <br>
           <br>
-          <a href=""><img class="contacts-img" src="img/phone.png" width="40px" height="auto"> 098-217-8244</a>
+          <a href="tel:0982178244"><img class="contacts-img" src="img/phone.png" width="40px" height="auto"> 098-217-8244</a>
           <br>
           <br>
-          <a href=""><img class="contacts-img" src="img/phone.png" width="40px" height="auto"> 062-381-5050</a>     
+          <a href="tel:0623815050"><img class="contacts-img" src="img/phone.png" width="40px" height="auto"> 062-381-5050</a>     
         </div>
         <div class="col-md-1">
             <img style="border-radius: 10px;" src="img/lineqr.jpg" width="130px" height="auto">
