--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BoxPhone</title>
+    <meta name="description" content="BoxPhoneStudio รับซ่อมโทรศัพท์ คอมพิวเตอร์ ติดฟิล์ม ลอกกระจกมือถือ เปลี่ยนแบต เปลี่ยนจอ รับปรึกษาปัญหาต่างๆเกี่ยวกับมือถือ คอมพิวเตอร์">
+    <title>BoxPhoneStudio รับซ่อมโทรศัพท์ คอมพิวเตอร์</title>
     <link rel="stylesheet" href="css/main.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -21,7 +22,7 @@
   <body>
     <header id="header">
       <a class="logo" href="http://"
-        ><img src="img/logo.png" width="40px" height="auto"
+        ><img alt="logo by BoxPhoneStudio" src="img/logo.png" width="40px" height="auto"
       /></a>
       <ul class="nav">
         <li><a href="/">หน้าแรก</a></li>
@@ -31,7 +32,7 @@
       </ul>
     </header>
     <section>
-      <img class="bg" src="img/bgmain.png" />
+      <img  alt="bg by BoxPhoneStudio" class="bg" src="img/bgmain.png" />
         <h1 id="text">BoxPhone <p>Studio</p></h1>
     </section>
     <div class="content" id="aboutme">
@@ -46,7 +47,7 @@
       <div class="row">
         <div class="col-md-4">
           <div class="card">
-            <img class="card-image" src="img/1.jpg" width="100%" height="50%" />
+            <img class="card-image" src="img/เปลี่ยนแบต.jpg" alt="เปลี่ยนแบต by BoxPhoneStudio" width="100%" height="50%" />
             <div class="card-text">
               <h2>เปลี่ยนแบต</h2>
               <p>การเปลี่ยนแบตทางร้านเรามีรับประกันตั้งแต่ 6 เดือน ถึง 1 ปี</p>
@@ -57,9 +58,10 @@
           <div class="card">
             <img
               class="card-image"
-              src="img/Board1.jpg"
+              src="img/Boardic.jpg"
               width="100%"
               height="50%"
+              alt="boardic by BoxPhoneStudio"
             />
             <div class="card-text">
               <h2>เปลี่ยน Board Ic</h2>
@@ -71,9 +73,10 @@
           <div class="card">
             <img
               class="card-image"
-              src="img/screen2.jpg"
+              src="img/เปลี่ยนจอ.jpg"
               width="100%"
               height="50%"
+              alt="เปลี่ยนจอ by BoxPhoneStudio"
             />
             <div class="card-text">
               <h2>เปลี่ยนจอ ลอกกระจกมือถือ</h2>
@@ -93,16 +96,16 @@
           <a href="https://www.facebook.com/BoxPhoneStudio" target="_blank"><img src="img/facebook.png" width="40px" height="auto" alt="facebookicons"> BoxPhoneStudio</a>
           <br>
           <br>
-          <a href=""><img class="contacts-img" src="img/line.png" width="40px"height="auto"> Line</a>
+          <a href=""><img class="contacts-img" src="img/line.png" alt="Line icon" width="40px" height="auto" > Line</a>
           <br>
           <br>
-          <a href="tel:0982178244"><img class="contacts-img" src="img/phone.png" width="40px" height="auto"> 098-217-8244</a>
+          <a href="tel:0982178244"><img class="contacts-img" alt="tel icon" src="img/phone.png" width="40px" height="auto"> 098-217-8244</a>
           <br>
           <br>
-          <a href="tel:0623815050"><img class="contacts-img" src="img/phone.png" width="40px" height="auto"> 062-381-5050</a>     
+          <a href="tel:0623815050"><img class="contacts-img" alt="tel icon" src="img/phone.png" width="40px" height="auto"> 062-381-5050</a>     
         </div>
         <div class="col-md-1">
-            <img style="border-radius: 10px;" src="img/lineqr.jpg" width="130px" height="auto">
+            <img style="border-radius: 10px;" src="img/lineqr.jpg" alt="lineqr by BoxPhoneStudio" width="130px" height="auto">
         </div>
       </div>
     </div>
