--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
   </head>
   <body>
     <header id="header">
-      <!--<a class="logo" href="http://" -->
+     <a class="logo" href=""
         ><img alt="logo by BoxPhoneStudio" src="img/logo.png" width="40px" height="auto"
-        /><!--</a>-->
+        /></a>
       <ul class="nav">
         <li><a href="/">หน้าแรก</a></li>
         <li><a href="">ผลงาน</a></li>
